--- a/css/style.css
+++ b/css/style.css
@@ -15,22 +15,23 @@
   height: 40px;
   display: flex;
   text-align: center;
+  align-items: center;
 }
 
 .login {
   background-color: #c1121f;
-  width: 200px;
   color: white;
-  line-height: 40px;
   cursor: pointer;
+  line-height: 40px;
+  flex-grow: 1;
 }
 
 .daftar {
   background-color: #e41c2a;
-  width: 200px;
   color: white;
-  line-height: 40px;
   cursor: pointer;
+  line-height: 40px;
+  flex-grow: 1;
 }
 
 .login:hover {
